--- a/toolbox_academy_preview/package.json
+++ b/toolbox_academy_preview/package.json
@@ -1,13 +1,14 @@
 {
   "name": "studywrench-backend",
   "version": "1.0.0",
+  "description": "Backend for StudyWrench app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -16,5 +17,11 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
